# ctool

./: .gitignore  Doxyfile  README.md  csafe_assert.h  csafe_errno.h  csafe_notnull.h  csafe_safecall.h  meson.build  test.c
builddir/meson-logs/: meson-log.txt
include/csafe/: assert.h  assertd.h  assertr.h  log.h  logf.h  notnull.h  safecall.h  status.h
include/ctool/: arraylist.h  assert.h  file.h  iteration.h  log.h  macro.h  status.h  thread.h
include/ctool/assert/: _internal.h  debug.h  runtime.h
include/ctool/io/: buffered.h  stream.h
include/ctool/log/: _internal.h
include/ctool/type/: _internal.h  arraylist.h  arraystack.h  bitset.h  list.h  optional.h
src/: assert.c  file.c  log.c  thread.c
src/io/: stream.c
src/log/: _internal.c
subprojects/: criterion.wrap
test/: assert.c  file.c  iteration.c  log.c  main.c  thread.c
test/io/: stream.c
test/type/: arraylist.c  bitset.c  list.c  optional.c
